Minor Commit 2.1 some css rules modified onPointerEvent glitch fixed on mobile version

--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,9 @@
 body {
   background-color: #000022;
   color: white;
-  min-width: max-content;
 }
 
 #root {
-  padding: 0 2rem;
   display: flex;
   flex-direction: column;
   place-items: center;
